# pdf-extraction

./: .gitignore  AGENTS.md  GAPS.md  GAPS_CLEANING.md  PLAN.md  PLAN_EXTRACTION_COMPLETION.md  README.md  ZOTERO.md  get_log.py  justfile  pyproject.toml  vakil_batch_pid_50.txt  vakil_batch_pid_500.txt  zotero-missing-markdowns.md  zotero-papers-with-pdfs.csv  zotero-papers-with-pdfs.json  zotero-papers-with-pdfs.md
alggeom-2021-c12_extracted/: alggeom-2021-c12.md  alggeom-2021-c12_content_list.json  alggeom-2021-c12_middle.json  alggeom-2021-c12_model.json
extracted/: A First Course in Wavelets With Fourier An - Albert Boggess.md  Classification of Fiber Bundles, Gauge The - Alexander Wijins.md  Proofs from the Book - Aigner, Ziegler.md  ahlfors-complex-analysis.md  ahlfors-complex-analysis_ERRORS.md  ash-mumford.md  elmendorf.md  gathmann-alggeom.md  kirillov-lie-groups.md  kirillov-lie-groups_ERRORS.md  moroianu-kahler.md
fixtures/: lorem.md  math-test.md  multi-page.md
scripts/: profile_mineru_batch_sizes.py  run_mineru_batch_worker.py  run_mineru_batched.py
src/pdf_extraction/: __init__.py  kaggle_client.py  models.py  state_machine.py
src/pdf_extraction/cli/: __init__.py  batch.py  corrections.py  download.py  merge.py  mineru.py  mistral.py  poll.py  refresh.py  status.py  submit.py
src/pdf_extraction/corrections/: __init__.py  llm.py
src/pdf_extraction/mineru/: __init__.py  kaggle.py
src/pdf_extraction/mistral/: __init__.py  ocr.py
tests/: test_cli.py  test_models.py  test_state_machine.py
